kubernetes/istio-demo-kind/manifests/echoserver-with-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-with-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-with-tls
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver-with-tls
    spec:
      containers:
      - name: conformance-echo
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        - name: https-api
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
        volumeMounts:
          - mountPath: /run/secrets/certs/
            name: echoserver-cert
            readOnly: true
          - mountPath: /run/secrets/ca/
            name: ca-cert
            readOnly: true
      volumes:
      - name: echoserver-cert
        secret:
          secretName: echoserver-cert
      - name: ca-cert
        secret:
          secretName: ca-cert
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  - name: https
    port: 443
    targetPort: https-api
  selector:
    app.kubernetes.io/name: echoserver-with-tls
