kubernetes/istio-demo-kind/manifests/echoserver-without-tls2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-without-tls
spec:
  selector:
    matchLabels:
      app: echoserver-without-tls
  template:
    metadata:
      labels:
        app: echoserver-without-tls
    spec:
      containers:
      - name: conformance-echo
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: echoserver-without-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE  # terminate TLS in gateway but use only server authentication
      credentialName: host1-cert
    hosts:
    - "*"  # accept any incoming request, do not require TLS SNI to be set
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
  # route requests with "Host: nnnn" but drop other requests
  - "host1.127-0-0-111.nip.io"
  gateways:
  - mygateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: echoserver  # interpreted as echoserver in as in current namespace
