kubernetes/istio-demo-kind/manifests/expose-envoy-admin-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-without-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-without-tls
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver-without-tls
    spec:
      containers:
      - name: conformance-echo
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver-without-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: envoy-admin-ep
spec:
  ingress:
  - port:
      number: 12345
      protocol: HTTP
      name: somename
    defaultEndpoint: 127.0.0.1:15000
---
