kubernetes/istio-demo-kind/manifests/echoserver-without-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-without-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-without-tls
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver-without-tls
    spec:
      containers:
      - name: conformance-echo
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver-without-tls
---

# Create policy to allow only mutual TLS connections.
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
spec:
  mtls:
    mode: STRICT
---

# Configure gateway, which acts as a loadbalancer operating at the edge of mesh
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"  # accept any incoming request, we do not require TLS SNI to be set

---
# Configure L7 HTTP URL based routing from gateway to the actual Service
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echoservice
spec:
  hosts:
  - "host1.127-0-0-111.nip.io"
  gateways:
  - mygateway
  http:
  - route:
    - destination:
        host: echoserver

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: echoserver
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-without-tls

  rules:
  - from:
    - source:
       principals: ["cluster.local/ns/foo/sa/bar"]
    to:
    - operation:
       methods: ["GET"]
       paths: ["/allowed*"]
